--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gatsby": "2.24.82",
+    "gatsby-plugin-catch-links": "2.3.15",
     "gatsby-source-filesystem": "2.3.35",
     "gatsby-transformer-remark": "2.8.43",
     "react": "16.14.0",
