--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "practice-gatsby",
+  "description": "Practice Gatsby",
   "private": true,
   "scripts": {
+    "start": "gatsby develop",
     "build": "gatsby build",
-    "develop": "gatsby develop",
-    "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
+  },
+  "author": "Neo <neos21@gmail.com> (http://neo.s21.xrea.com/)",
+  "license": "MIT",
+  "homepage": "https://github.com/Neos21/practice-gatsby#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Neos21/practice-gatsby.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Neos21/practice-gatsby/issues"
+  },
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/Neos21"
   },
   "dependencies": {
     "gatsby": "2.24.82",
