--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "gatsby": "2.24.82",
     "gatsby-plugin-catch-links": "2.3.15",
+    "gatsby-plugin-sharp": "2.6.43",
+    "gatsby-remark-images": "3.3.37",
     "gatsby-source-filesystem": "2.3.35",
     "gatsby-transformer-remark": "2.8.43",
     "react": "16.14.0",
