--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
-  "author": "Neo <neos21@gmail.com> (http://neo.s21.xrea.com/)",
+  "author": "Neo <neos21@gmail.com> (https://neos21.net/)",
   "license": "MIT",
   "homepage": "https://github.com/Neos21/practice-gatsby#readme",
   "repository": {
